Updated Player instances names